# hot-reload-poc

./: CMakeLists.txt  build.sh  main.cpp  orchestrate.sh  static_module.cpp  static_module.h
bench/: bench.cpp  bench.h
dlr/: loader.cpp  loader.h  plugin.cpp  plugin_v2.cpp
rcp/: patch_plugin.cpp  patcher.cpp  patcher.h  raw_injector.cpp  raw_injector.h  rcp_reloader.cpp  rcp_reloader.h  sort_plugin.cpp
